# opendeadlock

./: .gitignore  LICENSE  README.md  pubspec.yaml
.github/workflows/: flutter-ci.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/opendeadlock/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
docs/reference/legacy-screenshots/nick-2026-06-27/: README.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  main_menu.dart
lib/game/: game_codec.dart  game_replay.dart  game_saves.dart  game_setup.dart  game_state.dart
lib/gameplay/: game_screen.dart  game_setup_screen.dart
lib/menu/: comic_viewer_screen.dart  dev_menu.dart  legacy_reference_screen.dart  main_menu.dart  menu_title_bar.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: game_screen_test.dart  game_setup_screen_test.dart  game_state_test.dart  main_menu_test.dart  widget_test.dart
tools/src/binloader/: binloader.cpp  binloader.sln  binloader.vcxproj  binloader.vcxproj.filters
tools/src/camtools/: GLERROR.cpp  GLERROR.h  GLFILE.CPP  GLFILE.H  cam.hpp  decam.cpp  encam.cpp
tools/src/decoder/: CMakeLists.txt
tools/src/decoder/decoder/: CMakeCache.txt  CMakeLists.txt  decoder.cpp  decoder.h
tools/src/decoder/decoder/image_decoder/: image_decoder.cpp  image_decoder.h
tools/src/decoder/decoder/magick/: CMakeLists.txt  magick.cpp  magick.h
tools/src/decoder/decoder/palette_reader/: CMakeLists.txt  palette_reader.cpp  palette_reader.h
tools/src/decoder/decoder/sprite_info/: sprite_info.h
tools/src/decoder/decoder/sprite_table_reader/: CMakeLists.txt  sprite_table_reader.cpp  sprite_table_reader.h
tools/src/decoder/decoder/xpm_writer/: CMakeLists.txt  xpm_writer.cpp  xpm_writer.h
tools/src/dehdx/: dehdx.cpp  dehdx.sln  dehdx.vcxproj  dehdx.vcxproj.filters  hdx.hpp
tools/src/palettetool/: .project
tools/src/palettetool/src/net/sourceforge/opendeadlock/decode/palettematch/: PaletteTool.java
tools/src/palettetool/src/sinai/gaspar/blackhole/: Xpm.java
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
